<resources>
    <string name="app_name">KEABank</string>
    <string name="main_welcome">Velkommen til KEA Bank</string>
    <string name="main_login_or_register">Login eller registrer dig</string>
    <string name="login">Login</string>
    <string name="register">Ny bruger</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="new_user_header">Opret ny kunde</string>
    <string name="new_user_name">Navn</string>
    <string name="label_email">Email</string>
    <string name="button_submit">Send</string>
    <string name="label_password">Kodeord</string>
    <string name="label_name">Navn</string>
    <string name="title_activity_default_account">Basis konto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KEA Bank</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_default_account">Basiskonto</string>
    <string name="menu_budget_account">Budgetkonto</string>
    <string name="menu_business_account">Erhvervskonto</string>
    <string name="menu_pension_account">Pensionkonto</string>
    <string name="menu_savings_account">Opsparringskonto</string>
    <string name="menu_bills">Betal regninger</string>
    <string name="menu_user_settings">Min bruger</string>
    <string name="title_activity_navigation">Oversigt</string>
    <string name="title_activity_account_overview">Oversigt</string>
    <string name="new_user_error">Kunne ikke oprette ny client</string>
    <string name="login_error">Email og kodeord passer ikke sammen</string>
    <string name="confirm">Bekræft</string>
    <string name="cancel">Annuller</string>
    <string name="spinner_default_value">Vælg konto</string>
    <string name="transfer_spinner_error">Vælg en konto for at overføre</string>
    <string name="transfer_text_error">Udfyld tekstfeltet for at overføre</string>
    <string name="transfer_text_error_multiple">Udfyld tekstfelterne for at overføre</string>
    <string name="transfer_same_account_error">Kan ikke overføre til samme konto</string>
    <string name="transfer_pension_age_error">Kan kun trække penge fra pensionskonto efter alder 77</string>
    <string name="transfer_non_existing_account_error">Modtagende konto eksisterer ikke</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_account">Konto</string>
    <string name="header_balance">Balance</string>
    <string name="button_deposit">Sæt ind</string>
    <string name="button_withdraw">Træk ud</string>
    <string name="label_address">Adresse</string>
    <string name="label_city">By</string>
    <string name="label_birthday">Fødselsdato</string>
    <string name="button_transfer">Overfør</string>
    <string name="overdraft_confirm_dialog_message">Dette vil lave overtræk på denne konto\nTryk Bekræft for at acceptere</string>
    <string name="create_account_fragment_message">Ønsker du at oprette en %1$s</string>
    <string name="date_format">%1d:%2d:%3d : %4d$:%5d$</string>
    <string name="label_transfer">Overfør penge fra denne konto til en anden konto</string>
    <string name="menu_transfer_money">Overfør penge</string>
    <string name="from">Fra</string>
    <string name="amount">Antal</string>
    <string name="account">Konto</string>
    <string name="to">Til</string>
    <string name="account_number">Kontonummer</string>
    <string name="affiliate">%1$s: %2$s, %3$s</string>
    <string name="nemid">NEM ID</string>
    <string name="user_id">Bruger-ID</string>
    <string name="hashtag">#</string>
    <string name="accept">Godkend</string>
    <string name="nemid_error">Bruger-id og kodeord passer ikke sammen</string>
    <string name="nemid_key_error">Nøgle passer ikke</string>
    <string name="key">Nøgle</string>
    <string name="header_account_number">Kontonummer</string>
    <string name="recurring_transfers">Gentagne overførsler</string>
    <string name="rec_interval">Interval</string>
    <string name="rec_account_from">Fra konto</string>
    <string name="rec_account_to">Modtager</string>
    <string name="days">dage</string>
    <string name="new_recurring_payment">Tilføj ny gentagne overførsler</string>


</resources>
